--- a/ReactApp/package.json
+++ b/ReactApp/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "lucide-react": "^0.553.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "recharts": "^3.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
