Add email configuration details in application.properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,14 @@ spring.datasource.password=${Database_Password}
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
+
+# Email Configuration
+spring.mail.host=${Email_Host}
+spring.mail.port=${Email_Port}
+spring.mail.username=${Email_Username}
+spring.mail.password=${Email_Password}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
+
