--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,13 +7,5 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
-# Email Configuration
-spring.mail.host=${Email_Host}
-spring.mail.port=${Email_Port}
-spring.mail.username=${Email_Username}
-spring.mail.password=${Email_Password}
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
-
-
+# SendGrid Configuration
+sendgrid.api.key=${SENDGRID_API_KEY}
