--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,15 @@ spring.datasource.url=${Database_Host}
 spring.datasource.username=${Database_Username}
 spring.datasource.password=${Database_Password}
 
+# Hikari will use the above and the following to setup connection pooling
+spring.datasource.hikari.pool-name=SpringBootConnectorCP
+spring.datasource.hikari.maximumPoolSize=5
+spring.datasource.hikari.minimumIdle=3
+spring.datasource.hikari.maxLifetime=2000000
+spring.datasource.hikari.connectionTimeout=30000
+spring.datasource.hikari.idleTimeout=30000
+spring.datasource.hikari.auto-commit=true
+
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
